--- a/mint-site-project/styles/globals.css
+++ b/mint-site-project/styles/globals.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Oleo+Script+Swash+Caps&family=Open+Sans:wght@400;500;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 :root {
-  --font-family: 'Open Sans', sans-serif;
+  --font-family: "Open Sans", sans-serif;
   --clr-light: #f0e9e9;
   --clr-purple: #9b5de5;
   --clr-pink: #f15bb5;
@@ -15,4 +14,15 @@
   --clr-selection-bg: #cb3d92;
   --clr-selection-text: #f4f0f0;
   --clr-background: #06070a;
- }
+}
+
+html {
+  scroll-behavior: smooth;
+  font-family: var(--font-family);
+  background: var(--clr-background);
+}
+
+::selection {
+  background: var(--clr-selection-bg);
+  color: var(--clr-selection-text);
+}
